--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 #端口
 server.port=8888
-#server.servlet.context-path=client
-#server.tomcat.uri-encoding=UTF-8
+server.context-path=/cams
+server.tomcat.uri-encoding=UTF-8
 
 ##########################  数据库连接属性   ##########################
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3306/activiti_client?useUnicode=true&characterEncoding=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/cams?useUnicode=true&characterEncoding=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=926926
+spring.datasource.password=sq
 ##########################  druid数据源属性   ##########################
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -52,7 +52,7 @@ pagehelper.params=count=countSql
 ##########################  日志属性   ##########################
 logging.config=classpath:logback.xml
 #日志打印sql
-#logging.level.com.xproinfo.client.dao=debug
+#logging.level.com.tqy.cams.dao=debug
 
 # 页面默认前缀目录
 #spring.mvc.view.prefix=/WEB-INF/view/
