--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #端口
 server.port=8888
-server.context-path=/cams
-server.tomcat.uri-encoding=UTF-8
+#server.context-path=/cams
+#server.tomcat.uri-encoding=UTF-8
 
 ##########################  数据库连接属性   ##########################
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3306/activiti_client?useUnicode=true&characterEncoding=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
