测试接口修改

--- a/pom.xml
+++ b/pom.xml
@@ -2,28 +2,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
 	<groupId>com.tqy</groupId>
-	<artifactId>enterNet</artifactId>
+	<artifactId>cams</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
+	<name>cams Maven Webapp</name>
+  	<url>http://maven.apache.org</url>
 
-	<!--
-      spring boot 父节点依赖,
-      引入这个之后相关的引入就不需要添加version配置，
-      spring boot会自动选择最合适的版本进行添加。
-    -->
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.2.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>1.5.8.RELEASE</version>
 	</parent>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<tomcat.version>8.0.15</tomcat.version> 
 	</properties>
 
 	<dependencies>
@@ -38,6 +34,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-aop</artifactId>
@@ -59,6 +59,10 @@
 			<version>3.4</version>
 		</dependency>
 
+ 		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
 		<!--mysql jdbc驱动 -->
 		<dependency>
 			<groupId>mysql</groupId>
@@ -133,6 +137,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>cams</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
