--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,12 @@
 #端口
-server.port=8888
-#server.context-path=/cams
-#server.tomcat.uri-encoding=UTF-8
-
+server.port=8080
+server.context-path=/cams
+server.tomcat.uri-encoding=UTF-8
 ##########################  数据库连接属性   ##########################
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/activiti_client?useUnicode=true&characterEncoding=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://218.2.192.195:13306/cams?useUnicode=true&characterEncoding=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=sjcj_yqz
-spring.datasource.password=sjcj_yqz
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/cams?useUnicode=true&characterEncoding=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://218.2.192.195:13306/cams?useUnicode=true&characterEncoding=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=sq
 ##########################  druid数据源属性   ##########################
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
