--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #端口
 server.port=8080
-#server.context-path=/cams
+server.context-path=/cams
 server.tomcat.uri-encoding=UTF-8
 ##########################  数据库连接属性   ##########################
 spring.datasource.url=jdbc:mysql://192.168.0.105:3306/cams?useUnicode=true&characterEncoding=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
